minor fixes(driver):all changes

--- a/Frontend/tsconfig.app.json
+++ b/Frontend/tsconfig.app.json
@@ -8,6 +8,7 @@
     "module": "ESNext",
     "skipLibCheck": true,
 
+    "typeRoots": ["./node_modules/@types", "./node_modules/@mapbox"],
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
