--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@emotion/styled": "^11.11.5",
     "@headlessui/react": "^2.1.2",
+    "@mapbox/mapbox-gl-directions": "^4.3.1",
     "@mapbox/mapbox-gl-geocoder": "^5.0.2",
     "@mapbox/mapbox-sdk": "^0.16.0",
+    "@mapbox/react-map-gl": "^4.2.0-dev",
     "@mapbox/search-js-react": "^1.0.0-beta.21",
     "@mui/material": "^5.16.1",
     "@mui/x-date-pickers": "^7.10.0",
@@ -35,16 +37,19 @@
     "crypto-js": "^4.2.0",
     "date-fns": "^3.6.0",
     "formik": "^2.4.6",
+    "i": "^0.3.7",
     "input-otp": "^1.2.4",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.408.0",
     "mapbox-gl": "^3.5.1",
+    "npm": "^10.8.2",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-map-gl": "^7.1.7",
     "react-map-gl-geocoder": "^2.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
@@ -57,6 +62,7 @@
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
+    "@types/mapbox-gl": "^3.1.0",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
