--- a/Frontend/tsconfig.app.json
+++ b/Frontend/tsconfig.app.json
@@ -8,7 +8,6 @@
     "module": "ESNext",
     "skipLibCheck": true,
 
-    "typeRoots": ["./node_modules/@types", "./node_modules/@mapbox"],
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
@@ -24,6 +23,7 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
    
+    // "typeRoots": ["./node_modules/@types", "./node_modules/@mapbox"]
    
     
   },
