--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -26,10 +26,12 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-slider": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@reduxjs/toolkit": "^2.2.6",
     "@types/crypto-js": "^4.2.2",
+    "@types/socket.io-client": "^3.0.0",
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
     "class-variance-authority": "^0.7.0",
@@ -56,6 +58,7 @@
     "react-router-dom": "^6.24.1",
     "react-time-picker": "^7.0.0",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.7.5",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1",
