--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -63,6 +63,7 @@
     "socket.io-client": "^4.7.5",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "timeago.js": "^4.0.2",
     "vaul": "^0.9.1",
     "yup": "^1.4.0"
   },
