--- a/Backend/package.json
+++ b/Backend/package.json
@@ -31,6 +31,7 @@
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
     "socket.io": "^4.7.5",
+    "stripe": "^16.11.0",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
