--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -33,6 +33,7 @@
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@reduxjs/toolkit": "^2.2.6",
+    "@stripe/stripe-js": "^4.4.0",
     "@types/crypto-js": "^4.2.2",
     "@types/socket.io-client": "^3.0.0",
     "axios": "^1.7.2",
@@ -43,6 +44,7 @@
     "crypto-js": "^4.2.0",
     "date-fns": "^3.6.0",
     "formik": "^2.4.6",
+    "framer-motion": "^11.5.4",
     "i": "^0.3.7",
     "input-otp": "^1.2.4",
     "js-cookie": "^3.0.5",
